--- a/src/main/resources/templates/index_upload.html
+++ b/src/main/resources/templates/index_upload.html
@@ -512,7 +512,7 @@
                             $('#loadingModal').modal({backdrop: 'static', keyboard: false});
                             $.ajax({
                                 type: "POST",
-                                url: "/upurlimg",
+                                url: "/up-url",
                                 dataType: "json",
                                 data: {imgurl: result},
                                 success: function (data) {
