--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -409,7 +409,7 @@
 	var arr_markdown = "";
 	var arr_html = "";
 	var urltypes = 1;//1 url 2 md 3 a标签
-	var ykxz = [[${ykxz}]];
+	var uploadable = [[${uploadable}]];
 	var filesize = [[${filesize}]];
 	var imgcount = [[${imgcount}]];
 	var suffix= [[${suffix}]];
