--- a/src/main/resources/templates/admin/addgroup.html
+++ b/src/main/resources/templates/admin/addgroup.html
@@ -18,13 +18,13 @@
     <div class="layui-inline">
         <label class="layui-form-label">群组名称</label>
         <div class="layui-input-inline">
-            <input id="groupname"  style="width: 250px;" type="tel" name="groupname" lay-verify="required|phone" autocomplete="off" class="layui-input">
+            <input id="name"  style="width: 250px;" type="tel" name="name" lay-verify="required|phone" autocomplete="off" class="layui-input">
         </div>
     </div>
     <form class="layui-form">
         <label class="layui-form-label">所属存储源</label>
         <div class="layui-input-inline" style="width: 250px;">
-            <select id="keyid"  name="quiz1" style="max-height: 360px;">
+            <select id="keyId"  name="quiz1" style="max-height: 360px;">
                 <option value="5">&nbsp;本地存储</option>
                 <option value="1">&nbsp;网易NOS</option>
                 <option value="2">&nbsp;阿里OSS</option>
@@ -77,12 +77,12 @@ function addgroup() {
         icon: 16
         ,shade: 0.01
     });
-    var groupname = $('#groupname').val();
-    var keyid = $('#keyid').val();
+    var name = $('#name').val();
+    var keyId = $('#keyId').val();
     $.ajax({
         type: "POST",
         url: "/admin/root/addisgroup",
-        data: {groupname:groupname,keyid:keyid},
+        data: {name:name,keyId:keyId},
         dataType: "json",
         success: function (data) {
             if (data > 0) {
