--- a/src/main/resources/templates/admin/setgroup.html
+++ b/src/main/resources/templates/admin/setgroup.html
@@ -18,13 +18,13 @@
     <div class="layui-inline">
         <label class="layui-form-label">群组名称</label>
         <div class="layui-input-inline">
-            <input id="groupname" th:value="${group.getGroupname()}" style="width: 250px;" type="tel" name="groupname" lay-verify="required|phone" autocomplete="off" class="layui-input">
+            <input id="name" th:value="${group.getName()}" style="width: 250px;" type="tel" name="name" lay-verify="required|phone" autocomplete="off" class="layui-input">
         </div>
     </div>
     <form class="layui-form">
         <label class="layui-form-label">所属存储源</label>
         <div class="layui-input-inline" style="width: 250px;">
-            <select id="keyid"  name="quiz1" style="max-height: 360px;">
+            <select id="keyId"  name="quiz1" style="max-height: 360px;">
                 <option value="5">&nbsp;本地存储</option>
                 <option value="1">&nbsp;网易NOS</option>
                 <option value="2">&nbsp;阿里OSS</option>
@@ -42,18 +42,18 @@
 <script th:src="@{/static/js/jquery-3.4.1.min.js}" type="text/javascript"></script>
 <script th:src="@{/layui/layui/layui.js}"></script>
 <script>
-    var keyid = [[${group.getKeyid()}]];
+    var keyId = [[${group.getKeyId()}]];
     var id = [[${group.getId()}]];
     layui.use(['form','table','layer'], function(){
         table = layui.table;
         var layer = layui.layer;
         var form = layui.form;
 
-        $('#keyid').val(keyid);
+        $('#keyId').val(keyId);
         form.render('select');
 
         form.on('select', function(data){
-            keyid = data.value;
+            keyId = data.value;
         });
     });
 
@@ -63,12 +63,11 @@ function setgroup() {
         icon: 16
         ,shade: 0.01
     });
-    var groupname = $('#groupname').val();
-    //var keyid = $('#keyid').val();
+    var name = $('#name').val();
     $.ajax({
         type: "POST",
         url: "/admin/root/updategroup",
-        data: {groupname:groupname,keyid:keyid,id:id},
+        data: {name:name,keyId:keyId,id:id},
         dataType: "json",
         success: function (data) {
             if (data > 0) {
