--- a/src/main/resources/templates/admin/table.html
+++ b/src/main/resources/templates/admin/table.html
@@ -367,7 +367,7 @@
     function exit() {
         $.ajax({
             type: "POST",
-            url: "/user/exit.do",
+            url: "/logout",
             dataType: "json",
             success: function (data) {
                 toastr.success("账号已退出。");
