--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -144,9 +144,6 @@
 					<h1 style="font-size: 4.5em;" th:text="${config.getWebname()}"></h1>
 					<a id="goupdate" class="menu-link" data-section="contact" data-nav-title="contact" data-section-pos="-100"
 					   data-section-posy="0"><span class="glyphicon glyphicon-open" aria-hidden="true"></span>立即上传</a>
-<!--					<a id="goupdate2"  onclick="xiazai()">-->
-<!--						<span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>客户端</a>-->
-
 					<div class="sub-title" id="wordsrotator">
 						<h4>纯粹免费的图片驿站</h4>
 					</div>
@@ -238,7 +235,7 @@
 											<br />
 											<span class="text">您也可以尝试文件拖拽，使用QQ截屏工具，然后激活窗口后粘贴。<span id="whts" data-toggle="popover" title="Example popover" class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></span>
 											<br />
-											<span class="text" id="urlsc" ><a style="color: #4ebd87;font-size: 0.9em;cursor:pointer;font-weight: bold;" onclick="imgsc()">使用图片URL地址上传</a></span>
+											<span class="text" id="urlsc" ><a style="color: #4ebd87;font-size: 0.9em;cursor:pointer;font-weight: bold;" onclick="upByUrl()">使用图片URL地址上传</a></span>
 
 											<div id="filePicker">
 
@@ -341,10 +338,10 @@
 			<div class="form loginBox">
 				<form id="login" onkeydown="keyLogin();">
 					<div class="form-group">
-						<input id="loginemail" type="email" style=" border-left:none;border-right:none;border-top:none;border-bottom:1px solid #0F2543;"  placeholder="Email">
+						<input id="loginEmail" type="email" style=" border-left:none;border-right:none;border-top:none;border-bottom:1px solid #0F2543;"  placeholder="Email or userName">
 					</div>
 					<div class="form-group">
-						<input id="loginpassword" type="password" style="color:#000;background-color:#fff;padding: 18px 25px 22px 25px;width: 100%; border-left:none;border-right:none;border-top:none;border-bottom:1px solid #0F2543;"   placeholder="Password">
+						<input id="loginPassword" type="password" style="color:#000;background-color:#fff;padding: 18px 25px 22px 25px;width: 100%; border-left:none;border-right:none;border-top:none;border-bottom:1px solid #0F2543;"   placeholder="Password">
 						<hr />
 					</div>
 					<div class="form-group">
@@ -371,11 +368,9 @@
 			<div class="form loginBox">
 				<a href="https://www.maoyuncloud.com/" target="_blank">
 					<img style="max-width: 33.3%;" src="" />
-					<!--						https://hellohao-cloud.oss-cn-beijing.aliyuncs.com/%E5%AF%B9%E8%B1%A1%E5%AD%98%E5%82%A8%E8%B5%9E%E5%8A%A9logo/WechatIMG172L.png-->
 				</a>
 				<a href="https://www.upyun.com" target="_blank">
 					<img style="max-width: 33.3%;" src="" />
-					<!--						https://hellohao-cloud.oss-cn-beijing.aliyuncs.com/%E5%AF%B9%E8%B1%A1%E5%AD%98%E5%82%A8%E8%B5%9E%E5%8A%A9logo/%E5%8F%88%E6%8B%8D%E4%BA%91_logo2.png-->
 				</a>
 			</div>
 		</div>
@@ -383,8 +378,6 @@
 </div>
 <div class="md-overlay"></div>
 
-<!--	http://cdn.wwery.com/tourist/4c7810718014927.png
--->
 
 <script th:src="@{/webuploade/js/webuploader.js}"></script>
 <script th:src="@{/webuploade/js/upload.js}" ></script>
@@ -416,7 +409,6 @@
 
 	$(document).ready(function () {
 		$(".jb").fadeToggle();
-		//$("#page-header").fadeToggle("slow");
 		$(".jb").fadeToggle(4000);
 	});
 
@@ -432,7 +424,7 @@
 		var gg=[[${config.getNotice()}]];
 		var arr=new Array();
 		var arr2=new Array();
-//可以用字符或字符串分割
+		//可以用字符或字符串分割
 		arr=gg.split('|');
 		for(var i=0;i<arr.length;i++)
 		{arr2.push('<h2>'+arr[i]+'</h2>');}
@@ -455,15 +447,18 @@
 		$("#links").html(links);
 
 
-		$("#whts").attr("title",'图片大小不得超过'+[[${uploadConfig.getFilesizetourists()}]]+' MB，登录本站可上传'+[[${uploadConfig.getFilesizeuser()}]]+' M图片以及查看历史图片记录等更多操作。');
+		$("#whts").attr("title",'图片大小不得超过'+[[${systemConfig.touristOnceUploadMaxSize}]]+' KB，' +
+				'登录本站可上传'+[[${systemConfig.userOnceUploadMaxSize}]]+' KB图片以及查看历史图片记录等更多操作。');
 		$.ajax({
 			type: "POST",
-			url: "/islogin",
+			url: "/isLogin",
 			dataType: "json",
-			success: function (data) {
-				if(data.lgoinret==1){
-					var h = '<li class="active"><a class="menu-link" data-section="home" data-nav-title="home"\n' +
-							'                    data-section-pos="0" data-section-posy="0">Home <i class="fa fa-fw fa-home"></i>\n' +
+			success: function (ret) {
+				console.log(ret);
+				if(ret.data){
+					var h = '<li class="active">' +
+							'<a class="menu-link" data-section="home" data-nav-title="home"' +
+							'                    data-section-pos="0" data-section-posy="0">Home <i class="fa fa-fw fa-home"></i>' +
 							'                </a></li>';
 					var h1 = '<li><a class="menu-link" target="_blank" href="/admin/goadmin" id="usernames">控制面板&nbsp;<i class="fa fa-fw fa-list"></i></a></li>';
 					var h2 = '<li><a class="menu-link" href="javascript:exit();" title="666" onclick="">退出&nbsp;<span class="glyphicon glyphicon-log-out"></span></a></li>';
@@ -497,7 +492,7 @@
 			//验证成功
 			$.ajax({
 				type: "POST",
-				url: "/user/register",
+				url: "/register",
 				data: {email: mail, username: registerusername, password: registerpassword,zctmp:zctmp},
 				dataType: "json",
 				success: function (data) {
@@ -591,57 +586,41 @@
 
 	//登录
 	function loginAjax() {
-		var loginemail = $("#loginemail").val();
-		var loginpassword = $("#loginpassword").val();
-		if(verification){
-			//验证成功
-			$.ajax({
-				type: "POST",
-				url: "/user/login",
-				data: {email: loginemail, password: loginpassword,logotmp:logotmp},
-				dataType: "json",
-				success: function (data) {
-					$('#loginModal').modal('hide');
-					if (data == 1) {
-						toastr.success("登录成功。");
-						setTimeout(function () {
-							window.location.reload();
-						}, 1000);
-					} else {
-						dd();
-						if (data == -1) {
-							$('#dlts').text('您的账号是未激活状态，无法登陆。');
-							toastr.error('您的账号是未激活状态，无法登陆。');
-							again();
-						} else if(data==-2){
-							$('#dlts').text('您的账号已被冻结。');
-							toastr.error('您的账号已被冻结。');
-							again(1);
-						}else if(data==-3){
-							$('#dlts').text('非法登录，请刷新页面重新尝试。');
-							toastr.error('非法登录，请刷新页面重新尝试。');
-							again(1);
-						}
-						else {
-							$('#dlts').text('登录失败，你的邮箱或密码不正确，请重试。');
-							toastr.error('登录失败，你的邮箱或者密码不正确，请重试。');
-							again(1);
-						}
-						setTimeout(function () {
-							//window.location.reload();
-						}, 2000);
-					}
-				}
-			});
-		}else{
+		if(!verification){
 			$('#dlts').text('请滑动验证码进行验证，才可登录。');
+			return false;
 		}
+		let loginEmail = $("#loginEmail").val();
+		let loginPassword = $("#loginPassword").val();
+		$.ajax({
+			type: "POST",
+			url: "/login",
+			data: {email: loginEmail, password: loginPassword, logotmp:logotmp},
+			dataType: "json",
+			success: function (ret) {
+				$('#loginModal').modal('hide');
+				if (ret.success) {
+					toastr.success("登录成功。");
+					setTimeout(function () {
+						window.location.reload();
+					}, 1000);
+				} else {
+					dd();
+					$('#dlts').text(ret.message);
+					toastr.error(ret.message);
+					again();
+					setTimeout(function () {
+						//window.location.reload();
+					}, 2000);
+				}
+			}
+		});
 	}
 
 	function exit() {
 		$.ajax({
 			type: "POST",
-			url: "/user/exit.do",
+			url: "logout",
 			dataType: "json",
 			success: function (data) {
 				toastr.success("账号已退出。");
@@ -650,20 +629,20 @@
 		});
 	}
 
-	function imgsc() {
-		var str = '输入图片URL地址：';
-		if(isday>0){
+	/**
+	 * 使用 URL 上传
+	 */
+	function upByUrl() {
+        let str = '输入图片URL地址：';
+        if(isday>0){
 			str = '输入图片URL地址：('+isday+'天后将会自动销毁)';
 		}
 		swal(str, {
 			content: "input",
-			//buttons: true
-		})
-				.then((value) => {
-			var result =value;
-		if(result!=null && result!="" ){
-			urlimg(result);
-		}
+		}).then((value) => {
+            if(value != null && value !== "" ){
+                upByUrlSub(value);
+			}
 	});
 	}
 
@@ -707,67 +686,48 @@
 	var baidu = [[${config.getBaidu()}]];
 	loadScriptString(baidu);
 
-	function urlimg(result) {
-		if(result) {
-			var rx=/^https?:\/\//i;
-			if(rx.test(result)==true){
-				$('#loadingModal').modal({backdrop: 'static', keyboard: false});
-				$.ajax({
-					type: "POST",
-					url: "/up-url",
-					dataType: "json",
-					data: {imgurl: result,setday:isday},
-					success: function (data) {
-						for(var i=0;i<data.length;i++){
-
-							if(data[i]==-1){
-								$('#loadingModal').modal('hide');
-								//tanchuang('上传失败','未配置存储源，请先后台配置存储源','error');
-								swal('上传失败', '未配置存储源，请先后台配置存储源');
-
-							}
-							else if(data[i]==-2){
-								$('#loadingModal').modal('hide');
-								swal('上传失败', '图片不存在或太大');
-							}
-							else if(data[i]==-3){
-								$('#loadingModal').modal('hide');
-								swal('上传失败', '文件类型不符合要求');
-							}
-							else if(data[i]==-4){
-								$('#loadingModal').modal('hide');
-								swal('上传失败', '该文件不支持上传');
-							}else if(data[i]==-5){
-								$('#loadingModal').modal('hide');
-								swal('上传失败，可用空间不足');
-							}
-							else{
-								$('#loadingModal').modal('hide');
-								swal('上传成功', '该图片链接已成功上传');
-								$("#address").css('display', 'block');
-								arr_url += data[i] + '\r\n';
-								arr_markdown += '![ ](' + data[i] + ')\r\n';
-								arr_html += '<img src="' + data[i] + '" alt="Image" title="Image" /> \r\n';
-							}
-							if(urltypes==1){
-								$("#urls").text(arr_url);
-							}else if(urltypes==2){
-								$("#urls").text(arr_markdown);
-							}else{
-								$("#urls").text(arr_html);
-							}
-						}
-					}
-				});
-			}else{tanchuang('网址格式错误','网址必须以http(s)://开头。','error');}
+	function upByUrlSub(url) {
+		if(url) {
+            let rx = /^https?:\/\//i;
+            if(!rx.test(url)){
+				tip('网址格式错误','网址必须以http(s)://开头。','error');
+				return;
+			}
+			$('#loadingModal').modal({backdrop: 'static', keyboard: false});
+			$.ajax({
+				type: "POST",
+				url: "/up-url",
+				dataType: "json",
+				data: {imageUrl: url, expireDay:isday},
+				success: function (ret) {
+                    if (!ret.success) {
+                        $('#loadingModal').modal('hide');
+                        swal("上传失败", ret.message);
+                    } else{
+                        $('#loadingModal').modal('hide');
+                        swal('上传成功', '该图片链接已成功上传');
+                        $("#address").css('display', 'block');
+                        arr_url += ret.data.url + '\r\n';
+                        arr_markdown += '![ ](' + ret.data.url + ')\r\n';
+                        arr_html += '<img src="' + ret.data.url + '" alt="Image" title="Image" /> \r\n';
+                    }
+                    if(urltypes === 1){
+                        $("#urls").text(arr_url);
+                    }else if(urltypes === 2){
+                        $("#urls").text(arr_markdown);
+                    }else{
+                        $("#urls").text(arr_html);
+                    }
+				}
+			});
 		}
 	}
 
-	function tanchuang(str1,str2,types) {
+	function tip(title, text, type) {
 		swal({
-			title: str1,
-			text: str2,
-			type: types,
+			title: title,
+			text: text,
+			type: type,
 			showCancelButton: false,//true显示两个按钮
 			confirmButtonColor: "#A5DC86",
 			confirmButtonText: "知道了",
@@ -816,23 +776,6 @@
 		$("#shi").html(hour);
 		$("#fen").html(min);
 		$("#miao").html(sec);
-	}
-	function xiazai(){
-		swal({
-			title: "即将下载客户端",
-			text: "客户端目前支持支Windows系统，Mac后期可能会推出。",
-			icon: "success",
-			buttons: true,
-			buttons: ["取消", "下载"],
-			dangerMode: false,
-		})
-				.then((value) => {
-			if (value) {
-				window.open("http://img.wwery.com/HellohaoApps/PC/Hellohao%E5%9B%BE%E5%BA%8A_beta.exe");
-			} else {
-			}
-		});
-
 	}
 	//回车登录
 	function keyLogin(){
@@ -892,7 +835,7 @@
 			logotmp = (tmp-500+1+2+3-4);
 			$.ajax({
 				type: "POST",
-				url: "/user/verification",
+				url: "/verification",
 				data:{tmp:logotmp,type:1},
 				dataType: "json",
 				success: function (data) {}
@@ -916,7 +859,7 @@
 			zctmp = (tmp-500+1+2+3-4);
 			$.ajax({
 				type: "POST",
-				url: "/user/verification",
+				url: "/verification",
 				data:{tmp:zctmp,type:2},
 				dataType: "json",
 				success: function (data) {}
@@ -945,7 +888,7 @@
 					logotmp = (tmp-500+1+2+3-4);
 					$.ajax({
 						type: "POST",
-						url: "/user/verification",
+						url: "/verification",
 						data:{tmp:logotmp,type:1},
 						dataType: "json",
 						success: function (data) {}
@@ -974,7 +917,7 @@
 					zctmp = (tmp-500+1+2+3-4);
 					$.ajax({
 						type: "POST",
-						url: "/user/verification",
+						url: "/verification",
 						data:{tmp:zctmp,type:2},
 						dataType: "json",
 						success: function (data) {}
@@ -988,9 +931,8 @@
 function setday() {
 	swal("输入图片期限（天）,到期自动销毁图片,最高365天：\n(输入0为永久保存)", {
 		content: "input",
-	})
-		.then((value) => {
-		var result =value;
+	}).then((value) => {
+	var result =value;
 	var reg=/^[0-9]\d*$/;
 	if(result!=null && result!="" ){
 		if(reg.test(result)){
