--- a/src/main/resources/templates/admin/table.html
+++ b/src/main/resources/templates/admin/table.html
@@ -535,7 +535,7 @@
                     //EMAIL
                     title: '大小',
                     formatter: function (value, rows, index) {
-                        return getSize(rows.sizes*1024);
+                        return getSize(rows.size*1024);
                         //return rows.sizes + "k";
                     },
                     align: 'center'
