--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,6 @@
 	<script th:src="@{/static/js/jquery-3.4.1.min.js}" type="text/javascript"></script>
 	<link th:href="@{/static/css/bootstrap.min.css}" rel="stylesheet">
 	<link th:href="@{/static/css/toastr.min.css}" media="all" rel="stylesheet" type="text/css"/>
-	<link th:href="@{/static/css/login-register.css}" media="all" rel="stylesheet" type="text/css"/>
 	<link th:href="@{/static/css/sweetalert.min.css}" media="all" rel="stylesheet" type="text/css"/>
 	<link th:href="@{/webuploade/css/component.css}" media="all" rel="stylesheet" type="text/css"/>
 	<link rel="stylesheet" th:href="@{/layui/layui/css/layui.css}">
@@ -22,7 +21,6 @@
 	<link rel="stylesheet" th:href="@{/css/verify.css}">
 
 	<script th:src="@{/static/js/toastr.min.js}" type="text/javascript"></script>
-	<script th:src="@{/static/js/login-register.js}"></script>
 	<script th:src="@{/static/js/clipboard.min.js}"></script>
 	<script th:src="@{/static/js/bootbox.min.js}"></script>
 	<script th:src="@{/static/js/sweetalert2.min.js}"></script>
@@ -102,7 +100,7 @@
 								  data-section-pos="0" data-section-posy="0">首页 <i class="fa fa-fw fa-home"></i>
 			</a></li>
 			<li><a href="javascript:;" class="md-trigger" data-modal="modal-3">登录&nbsp;<span class="glyphicon glyphicon-user" aria-hidden="true"></span></a></li>
-			<li><a href="javascript:;" class="md-trigger" data-modal="modal-4">注册&nbsp;<span class="glyphicon glyphicon-education" aria-hidden="true"></span></a></li>
+<!--			<li><a href="javascript:;" class="md-trigger" data-modal="modal-4">注册&nbsp;<span class="glyphicon glyphicon-education" aria-hidden="true"></span></a></li>-->
 		</ul>
 	</div>
 	<div class="cls">
@@ -381,7 +379,7 @@
 	var arr_markdown = "";
 	var arr_html = "";
 	var urltypes = 1;//1 url 2 md 3 a标签
-	var uploadable = [[${uploadable}]];
+	// var uploadable = [[${uploadable}]];
 	var filesize = [[${filesize}]];
 	var imgcount = [[${imgcount}]];
 	var suffix= [[${suffix}]];
@@ -428,8 +426,6 @@
 		$("#links").html(links);
 
 
-		$("#whts").attr("title",'图片大小不得超过'+[[${systemConfig.touristOnceUploadMaxSize}]]+' KB，' +
-				'登录本站可上传'+[[${systemConfig.userOnceUploadMaxSize}]]+' KB图片以及查看历史图片记录等更多操作。');
 		$.ajax({
 			type: "POST",
 			url: "/isLogin",
@@ -468,52 +464,52 @@
 	});
 
 
-	function zhuce(mail, registerusername, registerpassword) {
-        if (!zcverification) {
-            return;
-        }
-        //验证成功
-        $.ajax({
-            type: "POST",
-            url: "/register",
-            data: {email: mail, username: registerusername, password: registerpassword,zctmp:zctmp},
-            dataType: "json",
-            success: function (ret) {
-                if (ret.success) {
-					let data = ret.data;
-					let msg = data.status === 1? "注册成功，快去登录体验吧。": "注册成功，请前往邮箱激活你的账号，注意！激活邮件如果迟迟未收到，有可能在您的【垃圾箱】中。";
-					layui.use('layer', function(){
-						var layer = layui.layer;
-						layer.alert(msg, {
-							skin: 'layui-layer-molv' //样式类名 自定义样式
-							,closeBtn: 0  // 是否显示关闭按钮
-							,anim: 1 //动画类型
-							,btn: ['确定'] //按钮
-							,icon: 1  // icon
-							,yes:function(){
-								window.location.reload();
-							}
-						});
-					});
-                } else {
-                    layui.use('layer', function(){
-                        var layer = layui.layer;
-                        layer.alert(ret.message, {
-                            skin: 'layui-layer-molv' //样式类名 自定义样式
-                            ,closeBtn: 0  // 是否显示关闭按钮
-                            ,anim: 1 //动画类型
-                            ,btn: ['确定'] //按钮
-                            ,icon: 2  // icon
-                        });
-                    });
-                    setTimeout(function () {
-                    }, 2000);
-                }
-                again(2);
-            }
-        });
-
-	}
+	// function zhuce(mail, registerusername, registerpassword) {
+    //     if (!zcverification) {
+    //         return;
+    //     }
+    //     //验证成功
+    //     $.ajax({
+    //         type: "POST",
+    //         url: "/register",
+    //         data: {email: mail, username: registerusername, password: registerpassword,zctmp:zctmp},
+    //         dataType: "json",
+    //         success: function (ret) {
+    //             if (ret.success) {
+	// 				let data = ret.data;
+	// 				let msg = data.status === 1? "注册成功，快去登录体验吧。": "注册成功，请前往邮箱激活你的账号，注意！激活邮件如果迟迟未收到，有可能在您的【垃圾箱】中。";
+	// 				layui.use('layer', function(){
+	// 					var layer = layui.layer;
+	// 					layer.alert(msg, {
+	// 						skin: 'layui-layer-molv' //样式类名 自定义样式
+	// 						,closeBtn: 0  // 是否显示关闭按钮
+	// 						,anim: 1 //动画类型
+	// 						,btn: ['确定'] //按钮
+	// 						,icon: 1  // icon
+	// 						,yes:function(){
+	// 							window.location.reload();
+	// 						}
+	// 					});
+	// 				});
+    //             } else {
+    //                 layui.use('layer', function(){
+    //                     var layer = layui.layer;
+    //                     layer.alert(ret.message, {
+    //                         skin: 'layui-layer-molv' //样式类名 自定义样式
+    //                         ,closeBtn: 0  // 是否显示关闭按钮
+    //                         ,anim: 1 //动画类型
+    //                         ,btn: ['确定'] //按钮
+    //                         ,icon: 2  // icon
+    //                     });
+    //                 });
+    //                 setTimeout(function () {
+    //                 }, 2000);
+    //             }
+    //             again(2);
+    //         }
+    //     });
+	//
+	// }
 
 	//登录
 	function loginAjax() {
